Answer to part 4

--- a/plants.html
+++ b/plants.html
@@ -32,6 +32,17 @@
     </div>
   </div>
   <p>The letters row breaks first because the class names are different and the class for letters specifies it to be small</p>
+  <div class="flex-container">
+      <img src="Dacrycarpus.jpg" class="img-fluid" height="400" width="400" alt="plant picture">
+      <img src="Oemleria.jpg" class="img-fluid" height="400" width="400" alt="plant picture">
+      <img src="Echinacea.jpg" class="img-fluid" height="400" width="400" alt="plant picture">
 
+  </div>
+  <div class="flex-container">
+      <img src="Dacrycarpus.jpg" class="img-thumbnail" height="400" width="400" alt="plant picture">
+      <img src="Oemleria.jpg" class="img-thumbnail" height="400" width="400" alt="plant picture">
+      <img src="Echinacea.jpg" class="img-thumbnail" height="400" width="400" alt="plant picture">
+
+  </div>
 </body>
 </html>
