--- a/plants.html
+++ b/plants.html
@@ -32,17 +32,73 @@
     </div>
   </div>
   <p>The letters row breaks first because the class names are different and the class for letters specifies it to be small</p>
-  <div class="flex-container">
+  <div class="container">
       <img src="Dacrycarpus.jpg" class="img-fluid" height="400" width="400" alt="plant picture">
       <img src="Oemleria.jpg" class="img-fluid" height="400" width="400" alt="plant picture">
       <img src="Echinacea.jpg" class="img-fluid" height="400" width="400" alt="plant picture">
 
   </div>
-  <div class="flex-container">
+  <div class="container">
       <img src="Dacrycarpus.jpg" class="img-thumbnail" height="400" width="400" alt="plant picture">
       <img src="Oemleria.jpg" class="img-thumbnail" height="400" width="400" alt="plant picture">
       <img src="Echinacea.jpg" class="img-thumbnail" height="400" width="400" alt="plant picture">
-
   </div>
-</body>
+
+  <table class="table table-hover table-bordered">
+    <caption>Plant Tables</caption>
+    <thead>    
+        <tr class="table-info">
+          <th scope="col">#</th>
+          <th scope="col">Letter</th>
+          <th scope="col">Plant</th>
+          <th scope="col">Mountain</th>
+          <th scope="col">Lake</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th scope="row">1</th>
+          <td class="table-dark">D</td>
+          <td>Dacrycarpus</td>
+          <td>diablo</td>
+          <td>Darbandikhan</td>
+        </tr>
+        <tr>
+          <th scope="row">2</th>
+          <td class="table-dark">O</td>
+          <td>Oemleria</td>
+          <td>Osborn Dome</td>
+          <td>Okanagan</td>
+        </tr>
+        <tr>
+          <th scope="row">3</th>
+          <td class="table-dark">M</td>
+          <td>Machilus</td>
+          <td>mocho</td>
+          <td>Michigan</td>
+        </tr>
+        <tr>
+          <th scope="row">4</th>
+          <td class="table-dark">O</td>
+          <td>Oenothera</td>
+          <td>Ocypete Peak</td>
+          <td>Okeechobee</td>
+        </tr>
+        <tr>
+          <th scope="row">5</th>
+          <td class="table-dark">L</td>
+          <td>Lagarostrobos</td>
+          <td>liathach</td>
+          <td>Lake Manyara</td>
+        </tr>
+        <tr>
+          <th scope="row">6</th>
+          <td class="table-dark">E</td>
+          <td>Echinacea</td>
+          <td>eagle peak</td>
+          <td>Ebinur</td>
+        </tr>
+      </tbody>
+  </table>
+</body  >
 </html>
