--- a/bootstart.html
+++ b/bootstart.html
@@ -13,7 +13,33 @@
     integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
 </head>
 <body>
+  <nav class="navbar navbar-exapand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="bootstart.html">Interesting Plants</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-link" >
+          <a class="nav-link" aria-current="page" href="basic.html">Basic </a>
 
+        </li>
+        <li class="nav-link" >
+          <a class="nav-link" aria-current="page" href="advanced.html">Advanced </a>
+
+        </li>
+        
+      </ul>
+    </div>
+    
+  </nav>
+  <div class="dropdown navbar-expand-md navbar-light bg-light">
+    <button type="button" class="btn btn-dark dropdown-toggle"  id="dropdownMenuButton" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Initial button</button>
+    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+      <a class="dropdown-item" href="advanced.html">Advanced page</a>
+      <a class="dropdown-item" href="basic.html">Basic page</a>
+    </div>
+  </div>
 
 
 </body>
